# pydisass

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
bfd/: archive.c  bfdver.h  elf-bfd.h  elf.c  elf32-target.h  elf64-target.h  elflink.c
examples/: example.py
include/: config.h  streamprintf.h
include/disass/: disass.h
pydisass/: __init__.py  disass.py
src/: bucomm.c  bucomm.h  disass.cpp
src/python/: disass.cpp
src/python/test/: test_pydisass.py
src/test/: test_disass.cpp
