[build-system]
requires = ['setuptools>=42', 'wheel', 'cmake>=3.10', 'ninja', "ninja; platform_system!='Windows'"]
build-backend = "setuptools.build_meta"

[project]
name = "pydisass"
version = "0.1.0"
description = "Raw binary ARM disassembler for embedding and Python scripting"
authors = [
    { name = "Dmitry Mikushin", email = "dmitry@kernelgen.org" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dmikushin/pydisass"

